Applying other branches fixes, v1.0.2